--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #662D8C , #ED1E79);
+    background: linear-gradient(135deg, #662D8C , #fa3389);
     background-size: cover;
     background-attachment: fixed;
     display: flex;
@@ -12,12 +12,17 @@ body{
     width: 100%;
 }
 
-.cards-container {
+@media (max-width: 767px) {
+    .hidden-mobile {
+      display: none !important;
+    }
+}
+
+.cards-container-desktop {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     color: white;
     font-size: 1.5rem;
     font-weight: 700;
@@ -31,9 +36,9 @@ body{
         .card {
             position: relative;
             width: 18%;
-            min-width: 160px;
+            min-width: 180px;
             height: 20%;
-            min-height: 80px;
+            min-height: 100px;
             margin: 10px;
             cursor: pointer;
             transform-style: preserve-3d;
@@ -54,20 +59,20 @@ body{
             }
             
             .card-front {
-                background: linear-gradient(blue, pink);;
+                background: linear-gradient(#0069FF, blue);
                 background-size: cover;
                 .front-text {
                 }
             }
             
             .card-back {
-                background: linear-gradient(pink, blue);
+                background: linear-gradient(blue, #0069FF);
                 background-size: cover;
                 transform: rotateY(180deg);
 
                 .back-text {
-                    margin: 0;
-
+                    margin: 0 !important;
+                    margin-bottom: 10px !important;
                 }
 
                 .stripe-button {
@@ -118,6 +123,108 @@ body{
                     color: rgba(0, 0, 0, .3);
                 }
             }
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .hidden-desktop {
+      display: none !important;
+    }
+}
+
+.cards-container-mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 700;
+    width: 100%;
+    height: auto;
+
+    .card {
+        position: relative;
+        width: 18%;
+        min-width: 160px;
+        width: 90%;
+        height: 40%;
+        min-height: 160px;
+        margin: 10px;
+        cursor: pointer;
+        transform-style: preserve-3d;
+        border-radius: 10px;
+        transition: 0.35s;
+
+        .card-face {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background: linear-gradient(#000097, #0069ff);
+            background-size: cover;
+        }
+    
+        .front-text {
+            margin: 0 !important;
+        }
+        
+        .back-text {
+            margin: 10px !important;
+        }
+
+        .stripe-button {
+            cursor: pointer;
+            align-items: center;
+            background-color: #0A66C2;
+            border: 0;
+            border-radius: 100px;
+            box-sizing: border-box;
+            color: white !important;
+            text-decoration: none !important;
+            cursor: pointer;
+            display: inline-flex;
+            font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 20px;
+            max-width: 480px;
+            min-height: 40px;
+            min-width: 0px;
+            overflow: hidden;
+            padding: 0px;
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: center;
+            touch-action: manipulation;
+            transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+            user-select: none;
+            -webkit-user-select: none;
+            vertical-align: middle;
+        }
+
+        .stripe-button:hover,
+        .stripe-button:focus { 
+            background-color: #16437E;
+            color: white;
+        }
+
+        .stripe-button:active {
+            background: black;
+            color: rgb(255, 255, 255, .7);
+        }
+
+        .stripe-button:disabled { 
+            cursor: not-allowed;
+            background: rgba(0, 0, 0, .08);
+            color: rgba(0, 0, 0, .3);
         }
     }
 }
